2013-05-25  Arjen Markus  <arjenmarkus@users,sourceforge.net>
	* plotchart.tcl: Implement the options -timeformat and -gmt as per bug 3613718
	* plotpriv.tcl: Use the original axis options to reconstruct the axis for stripcharts
	* plotaxis.tcl: Implement the options -timeformat and -gmt
	* plotchart.man: Document the options -timeformat and -gmt
	* pkgIndex.tcl: Bumped version to 2.1.1
	* test_stripchart.tcl: Test and demonstraton of stripchart with date/time


2013-03-25  Andreas Kupries  <andreas_kupries@users.sourceforge.net>

	*
	* Released and tagged Tklib 0.6 ========================
	*

2013-03-10  Arjen Markus  <arjenmarkus@users,sourceforge.net>
	* plotchart.tcl: Basic support for subtexts with axes, accurate factor "torad", pixelToCoords extended
	* plotchart.test: Extended tests for coordinate transformations
	* plotaxis.tcl: Support for subtexts
	* plotconfig.tcl: Support for subtexts
	* plotspecial.tcl: Removed debug output
	* pkgIndex.tcl: Bumped version to 2.1

2013-01-27  Arjen Markus  <arjenmarkus@users,sourceforge.net>
	* plotchart.tcl: Set version to 2.0.2
	* pkgIndex.tcl: Set version to 2.0.2
	* plotchart.man: Refine description of the first argument for createRightAxis
	* plotaxis.tcl: Refine raising commands because of legend and right axis

2012-12-30  Arjen Markus  <arjenmarkus@users,sourceforge.net>
	* plotchart.tcl: Add support for -box for remaining chart types (note: margins for square-based plots
	                 still require work)
	* plotaxis.tcl: Adjust the tags for the time axis (include the widget)
	* plotpriv.tcl: Adjust the margins to make multiple plots more useful
	* plotspecial.tcl: Remove left-over print command

2012-12-29  Arjen Markus  <arjenmarkus@users,sourceforge.net>
	* plotchart.man: Document the subtitle command
	* plotchart.tcl: Add the subtitle command to all chart types and the deletedata command
	                 to those types for which it makes sense